[package]
name = "fs-chunker"
version = "0.3.0"
edition = "2021"
authors = ["Joshua Tenorio"]
repository = "https://github.com/joshtenorio/fs-chunker"
license = "MIT"
description = "Break a file into a list of chunks."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha256 = "1.5.0"
blake3 = "1.5.1"
